docs: documents the use of MDX

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve",
-    "build-pdf": "npx docusaurus-pdf http://localhost:3000/docs docs.pdf"
+    "serve": "docusaurus serve"
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
