feat: adds build step for pull requests
**Whats the current behavior**

Previously the CI Pipeline would only build and deploy the page on the main branch.
It is imperative that, when developing new features, the build is run at least once during the PR

**Whats the new behavior**

During pull requests only a build step is performed to ensure code is compile time valid.

closes [#27]

[#27]: https://gitlab.com/ohsnaparts/osasoftworks/zube/presence-docs/-/issues/27

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,12 +23,15 @@ before_script:
   - 'echo "NPM: $(npm --version)"'
   - 'echo'
 
-# list:
-#   stage: build
-#   script:
-#     # Listing all environment variables is a security risk! Use with caution!
-#     # https://docs.gitlab.com/ee/ci/variables/index.html#list-all-environment-variables
-#     - export
+build:
+  stage: build
+  allow_failure: false
+  interruptible: true
+  script:
+    - npm install
+    - npm run build
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
 pages:
   stage: deploy
