feat: upgrades docusaurus from v2 -> v3
Following the upgrade guide from
v2 -> v3.0.0-alpha.0 -> ^3.0.0
https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3

1. fix npx docusaurus-mdx-checker errors
   This file fails due to v3 interpreting brackets differently
   https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3#bad-usage-of--1

   ```error
   Error while compiling file docs/markdown-styleguide.mdx (Line=73 Column=12)
   Details: Unexpected character `/` (U+002F) before local name, expected a
   character that can start a name, such as a letter, `$`, or `_`
   (note: to create a link in MDX, use `[text](url)`)
   ```

   Cause: The `<link>` synthax in MDX files is unsupported since [v3](https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3#bad-usage-of-gfm-autolink) as the `<` character is interpreted as opening for JSX tags.

2. upgrades package.json docusaurus packages to ^3.0.0
   * Docusaurus values semantic versioning and keeps their plugins on the same version therefore it is
save to auto update minor versions.
   * upgrades docusaurus.config.js to `export default {}` synthax
   * also adds typescript packages as a preface to #29 since it was well documented in the upgrade guide

closes [#31]

[#31]: https://gitlab.com/ohsnaparts/osasoftworks/zube/presence-docs/-/issues/31

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zube",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -11,14 +11,21 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@docusaurus/theme-mermaid": "^2.4.1",
-    "@easyops-cn/docusaurus-search-local": "^0.35.0",
-    "@mdx-js/react": "^1.5.8",
-    "clsx": "^1.1.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@docusaurus/core": "^3.0.0",
+    "@docusaurus/preset-classic": "^3.0.0",
+    "@docusaurus/theme-mermaid": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@docusaurus/tsconfig": "^3.0.0",
+    "@docusaurus/module-type-aliases": "^3.0.0",
+    "@docusaurus/types": "^3.0.0",
+    "@types/react": "^18.2.29",
+    "typescript": "^5.0.0"
+
   },
   "browserslist": {
     "production": [
@@ -31,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
