--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
+    "@matejmazur/react-katex": "^3.1.3"
   },
   "devDependencies": {
-    "@docusaurus/tsconfig": "^3.0.0",
     "@docusaurus/module-type-aliases": "^3.0.0",
+    "@docusaurus/tsconfig": "^3.0.0",
     "@docusaurus/types": "^3.0.0",
     "@types/react": "^18.2.29",
     "typescript": "^5.0.0"
-
   },
   "browserslist": {
     "production": [
