--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
-    "@matejmazur/react-katex": "^3.1.3"
+    "@matejmazur/react-katex": "^3.1.3",
+    "@cortex-js/compute-engine": "^0.25.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.0.0",
