--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/react-webpack5": "^8.2.1",
     "@storybook/test": "^8.2.1",
     "@types/react": "^18.2.29",
+    "path-alias-plugin": "file:plugins/path-alias-plugin",
     "storybook": "^8.2.1",
     "typescript": "^5.0.0"
   },
