feat: makes plugin configurable and moves alias definition into docusaurus config
- moves the alias definition into the docusaurus.config.ts
- extracts types into separate files
- adds some more helper scripts to package.json
- adds docs on how to get it up and running
- adds gitignore for storybook-static and plugin transpiled files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ pages:
   script:
     - cd $DOCUSAURUS_PAGE_DIR
     - 'echo "---------- PWD: $PWD"'
+    - npm run build:plugins
     - npm install
     - npm run build
     - cd -
