--- a/plugins/path-alias-plugin/package.json
+++ b/plugins/path-alias-plugin/package.json
@@ -1,8 +1,15 @@
 {
   "name": "path-alias-plugin",
-  "version": "0.0.2",
+  "description": "Enables path aliases in docusaurus installations. Note from the devs: keep this version aligned with the latest known supported docusaurus version.",
+  "version": "3.4.0",
   "private": true,
+
   "scripts": {
-    "build": "tsc --project ./tsconfig.json"
+    "build": "npm install && npx tsc --project ./tsconfig.json"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "webpack": "^5.0.0",
+    "@docusaurus/types": "^3.0.0"
   }
 }
