feat: refactors plugin to read aliases from tsconfig
- Adds jest support to plugin
- Refactors plugin to be testable
- Parses tsconfig using new jsonc-parser (json with comments)
- Typescript now transpiles all files in the `./dist` folder
- adds .nvmc file for easier node installation (see README)
- Enables `strict` typescript transpilation
- Adjusts module strategy to `node` to ensure node compatible packages are produced
- Excludes jest configs from transpilation as it handles that for itself

Decisions:

In light of limited time resources some design decisions had to be made:
  - The webpack-alias-builder.ts uses the associative array synthax even though it is a little less readable.
  - an attempt was made to bundle everything using webpack but the resulting index.js turned out incompatible with docusaurus
  - the reference to `@docusaurus/types` needed to be removed as one of its dependencies [@mdx-js/mdx] created problems that couldn't be solved within the reserved time-box limit
     - > node_modules/@docusaurus/types/src/config.d.ts:14:37 - error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("@mdx-js/mdx")' call instead.
       >
       >  14 import type {ProcessorOptions} from '@mdx-js/mdx';
       >                                          ~~~~~~~~~~~~~
       > Found 1 error in node_modules/@docusaurus/types/src/config.d.ts:14
  - the `dist/` folder is committed as well to enable users of the plugin to use the latest version without much fuss
  -
[@mdx-js/mdx]: https://www.npmjs.com/package/@mdx-js/mdx?activeTab=readme

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:all": "npm run build:plugins && npm run build && npm run build:storybook",
     "build:docusaurus": "npm run docusaurus -- build",
     "build:storybook": "storybook build",
-    "build:plugins": "cd plugins/path-alias-plugin && npm run build && cd -"
+    "build:plugins": "cd plugins/path-alias-plugin && npm run build && cd - && npm install"
   },
   "dependencies": {
     "@cortex-js/compute-engine": "^0.25.1",
@@ -43,7 +43,7 @@
     "@storybook/react-webpack5": "^8.2.1",
     "@storybook/test": "^8.2.1",
     "@types/react": "^18.2.29",
-    "path-alias-plugin": "file:plugins/path-alias-plugin",
+    "path-alias-plugin": "file:plugins/path-alias-plugin/dist",
     "storybook": "^8.2.1",
     "typescript": "^5.0.0"
   },
