--- a/plugins/path-alias-plugin/package.json
+++ b/plugins/path-alias-plugin/package.json
@@ -3,13 +3,22 @@
   "description": "Enables path aliases in docusaurus installations. Note from the devs: keep this version aligned with the latest known supported docusaurus version.",
   "version": "3.4.0",
   "private": true,
-
   "scripts": {
-    "build": "npm install && npx tsc --project ./tsconfig.json"
+    "jest": "npx jest",
+    "build": "npm install && npx tsc --project ./tsconfig.json",
+    "build:watch": "npm run build -- --watch",
+    "test": "npm run jest"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "webpack": "^5.0.0",
-    "@docusaurus/types": "^3.0.0"
+    "@jest/globals": "^29.7.0",
+    "ts-jest": "^29.2.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "jsonc-parser": "^3.3.1"
   }
 }
