feat: refactors to yarn and extends README

--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
+    "yarn": "yarn --prefer-offline --emoji true",
     "docusaurus": "docusaurus",
-    "start": "npm run docusaurus -- start",
-    "build": "npm run build:docusaurus",
-    "swizzle": "npm run docusaurus -- swizzle",
-    "deploy": "npm run docusaurus -- deploy",
-    "serve": "npm run docusaurus -- serve",
+    "start": "yarn run yarn run docusaurus -- start",
+    "build": "yarn run yarn run build:docusaurus",
+    "swizzle": "yarn run yarn run docusaurus -- swizzle",
+    "deploy": "yarn run yarn run docusaurus -- deploy",
+    "serve": "yarn run yarn run docusaurus -- serve",
     "storybook": "storybook dev -p 6006",
-    "build:all": "npm run build:plugins && npm run build && npm run build:storybook",
-    "build:docusaurus": "npm run docusaurus -- build",
+    "build:all": "yarn run yarn run build:plugins && yarn run yarn run build && yarn run yarn run build:storybook",
+    "build:docusaurus": "yarn run yarn run docusaurus -- build",
     "build:storybook": "storybook build",
     "build:plugins": "cd plugins/path-alias-plugin && npm run build && cd - && npm install"
   },
@@ -19,7 +20,7 @@
     "@cortex-js/compute-engine": "^0.25.1",
     "@docusaurus/core": "^3.4.0",
     "@docusaurus/preset-classic": "^3.4.0",
-    "@docusaurus/theme-mermaid": "~3.4.0",
+    "@docusaurus/theme-mermaid": "^3.4.0",
     "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
@@ -43,7 +44,7 @@
     "@storybook/react-webpack5": "^8.2.1",
     "@storybook/test": "^8.2.1",
     "@types/react": "^18.2.29",
-    "path-alias-plugin": "file:plugins/path-alias-plugin/dist",
+    "path-alias-plugin": "file:./libs/path-alias-plugin/dist",
     "storybook": "^8.2.1",
     "typescript": "^5.0.0"
   },
