--- a/libs/path-alias-plugin/package.json
+++ b/libs/path-alias-plugin/package.json
@@ -4,9 +4,10 @@
   "version": "3.4.0",
   "private": true,
   "scripts": {
+    "yarn": "yarn --prefer-offline --emoji true",
     "jest": "npx jest",
-    "build": "npm install && npx tsc --project ./tsconfig.json",
-    "build:watch": "npm run build -- --watch",
+    "build": "yarn run yarn install && npx tsc --project ./tsconfig.json",
+    "build:watch": "yarn run build -- --watch",
     "test": "npm run jest"
   },
   "devDependencies": {
